# Python

./: .gitignore  amount_payment.py  calculate.py  cost_delivery.py  decoded_message.py  encoded_message.py  fibonacci.py  format_ingredients.py  format_string.py  game.py  get_fullname.py  grade.py  number_of_groups_factorial.py  output.txt  pdf.py  prepare_data1.py  prepare_data2.py  test.py  test_decor.py  test_odd_even.py  variable_number_of_parametrs.py  window_test.py
HW_04/: task_05.py  task_09.py  task_10.py  task_11.py  task_13.py  test.py
HW_05/: task_01.py  task_04.py  task_06.py  task_07.py  task_13.py  task_15.py
HW_06/: get_cats_info.py  get_credentials_users.py  hw_06_sort.py  is_equal_string.py  read_employees_from_file.py  sanitize_file.py  task_04.py  task_06.py  task_12.py  task_14.py
HW_07/: task_06.py  task_09.py  task_11.py  task_14.py  task_17.py  task_5.py
HW_07/clean_folder/: setup.py
HW_08/: hw_08.py  task_01.py  task_04.py  task_05.py  task_08.py  task_10.py  test.txt
HW_09/: hw_09.py  task_08.py  task_09.py  task_10.py
HW_10/: task_16_contacts.py  test.py
PyAutoGUI/: py_auto_gui.py
Python web/HW_01/console_bot/: pyproject.toml  setup.py
Python web/HW_01/console_bot/console_bot/: PromptToolkit.py  __init__.py  actions.py  address_book.py  bot.py  fields.py  informations.py  input_error.py  interface.py  user_input.py
Python web/HW_02/poetry_test/poetry_test/: pyproject.toml
checkio/: Three Words.py  checkio.py  dublicate_zeros.py
pdf/: pdf.py  pdf2word.py  txt_to_pdf.py
Посортувати/: 11111.rar  Лист Microsoft Excel.xlsx
(+160 files in other folders)
